<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_meeting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/label_subject_meeting"
                    app:layout_constraintStart_toStartOf="@id/label_subject_meeting"
                    app:layout_constraintTop_toBottomOf="@id/label_subject_meeting">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_meeting_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:fontFamily="sans-serif"
                        android:hint="@string/dialog_text_input_edit_text_hint"
                        android:imeOptions="actionDone"
...
                    android:layout_marginBottom="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/label_place_name_text"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/spinner_places"
                    app:layout_constraintEnd_toStartOf="@id/image_view_place_meeting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_place_meeting"
...
                    android:fontFamily="sans-serif"
                    android:text="@string/label_meeting_date_text"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/meeting_date_picker"
                    app:layout_constraintEnd_toStartOf="@id/image_view_date_meeting"
                    app:layout_constraintStart_toStartOf="@+id/label_place_name"
                    app:layout_constraintTop_toBottomOf="@+id/spinner_places" />

                <ImageView
                    android:id="@+id/image_view_date_meeting"
                    android:layout_width="wrap_content"
...
                    android:fontFamily="sans-serif"
                    android:text="@string/label_meeting_time_text"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/meeting_times_list"
                    app:layout_constraintEnd_toEndOf="@id/label_place_name"
                    app:layout_constraintStart_toStartOf="@+id/label_place_name"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_date_picker" />

                <ImageView
                    android:id="@+id/image_view_meeting_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:src="@drawable/ic_access_time_24dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/label_meeting_time"
...
                    android:fontFamily="sans-serif"
                    android:text="@string/label_participants_meeting_text"
                    android:textColor="@android:color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintBottom_toTopOf="@id/collaborators_list"
                    app:layout_constraintEnd_toStartOf="@id/image_view_meeting_participants"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_view_meeting_participants"
...
