<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/filter_by_date"
                android:title="@string/filter_by_date" />
            <item android:id="@+id/filter_by_place"
                android:title="@string/filter_by_place" />
        </menu>
    </item>
</menu>